Updating report structure and initial findings

--- a/52465-Assignment_1_Mark_Kelly.ipynb
+++ b/52465-Assignment_1_Mark_Kelly.ipynb
@@ -23,19 +23,125 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The basic purpose of the numpy.random package is for the generation of random numbers within Python. \n",
+    "It is broken up into 4 main area\n",
+    "- Simple Random Data\n",
+    "- Permutations\n",
+    "- Distibutions\n",
+    "- Random Generators\n",
+    "\n",
+    "The main difference between numpy.random and the python random module is that numpy.random is useful for generating arrays. This information can then be used when testing or running some operation or calculation."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Explain the use of the “Simple random data” and “Permutations” functions."
+    "## 2. Explain the use of the “Simple random data” and “Permutations” functions.\n",
+    "\n",
+    "The Simple Random Data function is used to create an randomly generated array as defined by the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.9028064 ,  0.772839  ],\n",
+       "       [ 0.55962887,  0.4394584 ],\n",
+       "       [ 0.00884814,  0.02663258],\n",
+       "       [ 0.61018288,  0.92078094]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(4, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Integers can also be generated. The example below is selecting 10 integers between 0 (inclusive) and 100 (exclusive)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([36, 63,  7, 44, 22, 74, 20, 76, 20, 17])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(0, 100, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([   29.,   204.,   894.,  2199.,  3005.,  2401.,   976.,   252.,\n",
+       "           36.,     4.]),\n",
+       " array([-35.3791567 , -27.62866627, -19.87817584, -12.12768541,\n",
+       "         -4.37719498,   3.37329545,  11.12378588,  18.87427631,\n",
+       "         26.62476674,  34.37525717,  42.1257476 ]),\n",
+       " <a list of 10 Patch objects>)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAElNJREFUeJzt3X+s3Xd93/Hnq84PqkKXpLmJXNvM\nbudNBGk10VUaiWlihCaOU+EgNZJRVSwWydWUaKBW6pwiNW1ZprCtMCHRIHexaibAzQooHvEW3DQI\n9Y/8cMAYOybNJaTk1lbsLhBAaNkc3vvjfK44Sa59z72+PueGz/MhHZ3v9/39fM/3fXyv7+t+f5zv\nTVUhSerPz0y6AUnSZBgAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE5dMOkGzuby\nyy+v9evXT7oNSXpdeeKJJ/6hqqYWGreiA2D9+vUcPHhw0m1I0utKkr8bZZyHgCSpUwaAJHXKAJCk\nThkAktQpA0CSOrVgACR5Q5LHknw9ydEkf9TqG5I8muTpJH+R5KJWv7jNz7Tl64de645WfyrJDefr\nTUmSFjbKHsBLwDur6leATcDmJNcCHwE+VlUbge8Ct7bxtwLfrap/AnysjSPJVcA24K3AZuBPk6xa\nzjcjSRrdggFQAz9ssxe2RwHvBP6y1fcAN7fprW2etvy6JGn1vVX1UlV9G5gBrlmWdyFJWrSRzgEk\nWZXkEHASOAB8C/heVZ1uQ2aBNW16DfAcQFv+IvALw/V51pEkjdlInwSuqpeBTUkuAb4AvGW+Ye05\nZ1h2pvorJNkB7AB485vfPEp76tj6nQ9MbNvP3n3TxLYtLYdFXQVUVd8DvgxcC1ySZC5A1gLH2/Qs\nsA6gLf9HwAvD9XnWGd7GrqqarqrpqakFb2UhSVqiUa4Cmmq/+ZPkZ4F3AceAh4HfaMO2A/e36X1t\nnrb8r6uqWn1bu0poA7AReGy53ogkaXFGOQS0GtjTrtj5GeC+qvpikieBvUn+PfA14N42/l7gvyWZ\nYfCb/zaAqjqa5D7gSeA0cFs7tCRJmoAFA6CqDgNvm6f+DPNcxVNV/we45QyvdRdw1+LblCQtNz8J\nLEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS\n1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmd\nMgAkqVMLBkCSdUkeTnIsydEkH2j1P0zy90kOtceWoXXuSDKT5KkkNwzVN7faTJKd5+ctSZJGccEI\nY04Dv1tVX03yJuCJJAfaso9V1X8eHpzkKmAb8FbgF4G/SvJP2+JPAL8GzAKPJ9lXVU8uxxuRJC3O\nggFQVSeAE236B0mOAWvOsspWYG9VvQR8O8kMcE1bNlNVzwAk2dvGGgCSNAGLOgeQZD3wNuDRVro9\nyeEku5Nc2mprgOeGVptttTPVJUkTMHIAJHkj8Dngg1X1feAe4JeBTQz2EP5kbug8q9dZ6q/ezo4k\nB5McPHXq1KjtSZIWaaQASHIhgx/+n66qzwNU1fNV9XJV/Rj4M35ymGcWWDe0+lrg+Fnqr1BVu6pq\nuqqmp6amFvt+JEkjGuUqoAD3Aseq6qND9dVDw94DHGnT+4BtSS5OsgHYCDwGPA5sTLIhyUUMThTv\nW563IUlarFGuAno78FvAN5IcarXfB96bZBODwzjPAr8NUFVHk9zH4OTuaeC2qnoZIMntwIPAKmB3\nVR1dxvciSVqEUa4C+hvmP36//yzr3AXcNU99/9nWkySNj58ElqROjXIISNI81u98YCLbffbumyay\nXf30cQ9AkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEg\nSZ0yACSpU94NVMtiUnfGlLR07gFIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUA\nSFKnFgyAJOuSPJzkWJKjST7Q6pclOZDk6fZ8aasnyceTzCQ5nOTqodfa3sY/nWT7+XtbkqSFjLIH\ncBr43ap6C3AtcFuSq4CdwENVtRF4qM0D3AhsbI8dwD0wCAzgTuBXgWuAO+dCQ5I0fgsGQFWdqKqv\ntukfAMeANcBWYE8btge4uU1vBT5VA48AlyRZDdwAHKiqF6rqu8ABYPOyvhtJ0sgWdQ4gyXrgbcCj\nwJVVdQIGIQFc0YatAZ4bWm221c5UlyRNwMgBkOSNwOeAD1bV9882dJ5anaX+6u3sSHIwycFTp06N\n2p4kaZFGCoAkFzL44f/pqvp8Kz/fDu3Qnk+2+iywbmj1tcDxs9Rfoap2VdV0VU1PTU0t5r1IkhZh\nlKuAAtwLHKuqjw4t2gfMXcmzHbh/qP6+djXQtcCL7RDRg8D1SS5tJ3+vbzVJ0gSM8gdh3g78FvCN\nJIda7feBu4H7ktwKfAe4pS3bD2wBZoAfAe8HqKoXknwYeLyN++OqemFZ3oUkadEWDICq+hvmP34P\ncN084wu47QyvtRvYvZgGJUnnh58ElqROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXK\nAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwA\nSeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1KkFAyDJ7iQnkxwZqv1hkr9Pcqg9tgwtuyPJTJKnktww\nVN/cajNJdi7/W5EkLcYoewB/Dmyep/6xqtrUHvsBklwFbAPe2tb50ySrkqwCPgHcCFwFvLeNlSRN\nyAULDaiqryRZP+LrbQX2VtVLwLeTzADXtGUzVfUMQJK9beyTi+5YkrQszuUcwO1JDrdDRJe22hrg\nuaExs612pvprJNmR5GCSg6dOnTqH9iRJZ7PUALgH+GVgE3AC+JNWzzxj6yz11xardlXVdFVNT01N\nLbE9SdJCFjwENJ+qen5uOsmfAV9ss7PAuqGha4HjbfpMdUnSBCxpDyDJ6qHZ9wBzVwjtA7YluTjJ\nBmAj8BjwOLAxyYYkFzE4Ubxv6W1Lks7VgnsAST4LvAO4PMkscCfwjiSbGBzGeRb4bYCqOprkPgYn\nd08Dt1XVy+11bgceBFYBu6vq6LK/G0nSyEa5Cui985TvPcv4u4C75qnvB/YvqjtJ0nnjJ4ElqVMG\ngCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBI\nUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMLBkCS\n3UlOJjkyVLssyYEkT7fnS1s9ST6eZCbJ4SRXD62zvY1/Osn28/N2JEmjGmUP4M+Bza+q7QQeqqqN\nwENtHuBGYGN77ADugUFgAHcCvwpcA9w5FxqSpMlYMACq6ivAC68qbwX2tOk9wM1D9U/VwCPAJUlW\nAzcAB6rqhar6LnCA14aKJGmMlnoO4MqqOgHQnq9o9TXAc0PjZlvtTHVJ0oQs90ngzFOrs9Rf+wLJ\njiQHkxw8derUsjYnSfqJpQbA8+3QDu35ZKvPAuuGxq0Fjp+l/hpVtauqpqtqempqaontSZIWcsES\n19sHbAfubs/3D9VvT7KXwQnfF6vqRJIHgf8wdOL3euCOpbct9Wv9zgcmtu1n775pYtvW8lswAJJ8\nFngHcHmSWQZX89wN3JfkVuA7wC1t+H5gCzAD/Ah4P0BVvZDkw8DjbdwfV9WrTyxLksZowQCoqvee\nYdF184wt4LYzvM5uYPeiupMknTd+EliSOmUASFKnlnoSWCvUJE8QSnp9cQ9AkjplAEhSpwwASeqU\nASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkA\nktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE6dUwAkeTbJN5IcSnKw1S5LciDJ0+35\n0lZPko8nmUlyOMnVy/EGJElLsxx7AP+qqjZV1XSb3wk8VFUbgYfaPMCNwMb22AHcswzbliQt0fk4\nBLQV2NOm9wA3D9U/VQOPAJckWX0eti9JGsG5BkABX0ryRJIdrXZlVZ0AaM9XtPoa4LmhdWdb7RWS\n7EhyMMnBU6dOnWN7kqQzueAc1397VR1PcgVwIMk3zzI289TqNYWqXcAugOnp6dcslyQtj3PaA6iq\n4+35JPAF4Brg+blDO+35ZBs+C6wbWn0tcPxcti9JWrolB0CSn0vyprlp4HrgCLAP2N6GbQfub9P7\ngPe1q4GuBV6cO1QkSRq/czkEdCXwhSRzr/OZqvpfSR4H7ktyK/Ad4JY2fj+wBZgBfgS8/xy2LUk6\nR0sOgKp6BviVeer/G7hunnoBty11e5Kk5eUngSWpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ\n6pQBIEmdMgAkqVMGgCR1ygCQpE6d698DkNSR9TsfmMh2n737pols96edewCS1CkDQJI6ZQBIUqc8\nB3AeTOo4qSQthnsAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUqbEHQJLN\nSZ5KMpNk57i3L0kaGOutIJKsAj4B/BowCzyeZF9VPTnOPiS9vkzy9io/zbeiHve9gK4BZqrqGYAk\ne4GtwHkJAO/JI0lnNu5DQGuA54bmZ1tNkjRm494DyDy1esWAZAewo83+MMlT572rxbkc+IdJN3EG\n9rZ0K7k/e1uaZektH1mGTuZ3Pv/t/vEog8YdALPAuqH5tcDx4QFVtQvYNc6mFiPJwaqannQf87G3\npVvJ/dnb0qzk3mBl9DfuQ0CPAxuTbEhyEbAN2DfmHiRJjHkPoKpOJ7kdeBBYBeyuqqPj7EGSNDD2\nvwhWVfuB/ePe7jJasYensLdzsZL7s7elWcm9wQroL1W18ChJ0k8dbwUhSZ0yAEaQ5MNJDic5lORL\nSX6x1ZPk4+22FoeTXD2h/v5Tkm+2Hr6Q5JKhZXe0/p5KcsMEerslydEkP04y/aplE+2t9bCibk2S\nZHeSk0mODNUuS3IgydPt+dIJ9bYuycNJjrWv6QdWSn9J3pDksSRfb739UatvSPJo6+0v2sUnE5Fk\nVZKvJfniiumtqnws8AB+fmj63wKfbNNbgP/J4PMN1wKPTqi/64EL2vRHgI+06auArwMXAxuAbwGr\nxtzbW4B/BnwZmB6qr4TeVrXt/hJwUevnqgl/r/1L4GrgyFDtPwI72/TOua/vBHpbDVzdpt8E/G37\nOk68v/Z/8I1t+kLg0fZ/8j5gW6t/Evg3E/za/g7wGeCLbX7ivbkHMIKq+v7Q7M/xkw+vbQU+VQOP\nAJckWT2B/r5UVafb7CMMPl8x19/eqnqpqr4NzDC4Hcc4eztWVfN9mG/ivTF0a5Kq+r/A3K1JJqaq\nvgK88KryVmBPm94D3DzWppqqOlFVX23TPwCOMfgk/8T7a/8Hf9hmL2yPAt4J/OUkewNIsha4Cfiv\nbT4roTcDYERJ7kryHPCbwB+08kq8tcW/ZrBXAiuzvzkrobeV0MMorqyqEzD4IQxcMeF+SLIeeBuD\n37RXRH/tEMsh4CRwgMHe3feGfjma5Nf3vwC/B/y4zf8CK6A3A6BJ8ldJjszz2ApQVR+qqnXAp4Hb\n51ab56XOy2VVC/XXxnwION16HFt/o/Q232rj6G0BK6GH150kbwQ+B3zwVXvHE1VVL1fVJgZ7wNcw\nOPz4mmHj7QqS/DpwsqqeGC7PM3TsvY39cwArVVW9a8ShnwEeAO5khFtbLJeF+kuyHfh14LpqBxXH\n1d8i/u2Gje3fboX3MIrnk6yuqhPtEOPJSTWS5EIGP/w/XVWfX2n9AVTV95J8mcE5gEuSXNB+057U\n1/ftwLuTbAHeAPw8gz2CiffmHsAIkmwcmn038M02vQ94X7sa6Frgxbld4TH3txn4d8C7q+pHQ4v2\nAduSXJxkA7AReGzc/Z3BSujt9XJrkn3A9ja9Hbh/Ek2049b3Aseq6qNDiybeX5Kpuavfkvws8C4G\n5ygeBn5jkr1V1R1Vtbaq1jP4HvvrqvrNldDbRM6Gv94eDH7jOQIcBv4HsKbVw+AP3HwL+AZDV7mM\nub8ZBseyD7XHJ4eWfaj19xRw4wR6ew+D37RfAp4HHlwpvbUetjC4muVbwIdWwPfaZ4ETwP9r/263\nMjhe/BDwdHu+bEK9/QsGhykOD32vbVkJ/QH/HPha6+0I8Aet/ksMfrGYAf47cPGEv77v4CdXAU28\nNz8JLEmd8hCQJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVP/H8Ailiwee9jFAAAA\nAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x23dab5fe3c8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = np.random.normal(0,10,10000)\n",
+    "plt.hist(x)"
    ]
   },
   {
@@ -85,18 +191,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
