Updating report with section 2

--- a/52465-Assignment_1_Mark_Kelly.ipynb
+++ b/52465-Assignment_1_Mark_Kelly.ipynb
@@ -33,7 +33,7 @@
     "- Distibutions\n",
     "- Random Generators\n",
     "\n",
-    "The main difference between numpy.random and the python random module is that numpy.random is useful for generating arrays. This information can then be used when testing or running some operation or calculation."
+    "The numpy.random package is similar to the python random package but allows more functionality like building whole arrays and extra probability density functions. This information can then be used when testing, simulating or running some operation or calculation."
    ]
   },
   {
@@ -42,12 +42,12 @@
    "source": [
     "## 2. Explain the use of the “Simple random data” and “Permutations” functions.\n",
     "\n",
-    "The Simple Random Data function is used to create an randomly generated array as defined by the user."
+    "The Simple Random Data function is used to create an randomly generated array as defined by the user. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -56,6 +56,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the example below, a randomly generated 4x2 array is shown where each value will be below 1."
    ]
   },
   {
@@ -162,12 +169,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([    4.,    40.,   255.,  1037.,  2353.,  3016.,  2167.,   890.,\n",
+       "          201.,    37.]),\n",
+       " array([-42.09123517, -34.34358639, -26.59593762, -18.84828885,\n",
+       "        -11.10064008,  -3.3529913 ,   4.39465747,  12.14230624,\n",
+       "         19.88995501,  27.63760379,  35.38525256]),\n",
+       " <a list of 10 Patch objects>)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAEmFJREFUeJzt3X+s3fV93/Hnq+ZHqyYbUAxzbWvX\nbb0pRFsdZFGkTFMWUn5lihOpSI6mxsqQXE2gJVKn1QSptM2QyLYGKVJK5AqrzpSGsiYR3nBLXEYU\n9Q9+mBQMxmHcEBpu7GF3JCRRNDaT9/44n6sc4Prec6+vzznm83xIR+f7fX8/3/N9f7nYr/v9cb5O\nVSFJ6s/PTLoBSdJkGACS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkTp0z6QYWc/HF\nF9fMzMyk25Cks8rjjz/+d1W1dqlxUx0AMzMzHDx4cNJtSNJZJcnfjjLOU0CS1CkDQJI6ZQBIUqcM\nAEnqlAEgSZ0yACSpU0sGQJKfTfJokieTHE7y+62+KckjSZ5L8mdJzmv189v8bFs+M/RZt7T6s0mu\nOVM7JUla2ihHAK8C762qXwW2ANcmuRL4FHBnVW0Gvgfc2MbfCHyvqn4FuLONI8llwHbgncC1wB8l\nWbOaOyNJGt2SAVADP2qz57ZXAe8F/rzV9wIfbNPb2jxt+VVJ0ur3VNWrVfVtYBa4YlX2QpK0bCN9\nE7j9pv448CvAZ4FvAd+vqpNtyBywvk2vB14EqKqTSV4BfqHVHx762OF1pLPOzK77J7LdF+54/0S2\nq7eekS4CV9VrVbUF2MDgt/Z3LDSsvecUy05Vf50kO5McTHLwxIkTo7QnSVqBZd0FVFXfB74GXAlc\nkGT+CGIDcLRNzwEbAdryvw+8PFxfYJ3hbeyuqq1VtXXt2iWfZSRJWqFR7gJam+SCNv1zwPuAI8BD\nwG+0YTuA+9r0vjZPW/4/qqpafXu7S2gTsBl4dLV2RJK0PKNcA1gH7G3XAX4GuLeq/nuSZ4B7kvwH\n4G+Au9v4u4H/kmSWwW/+2wGq6nCSe4FngJPATVX12urujiRpVEsGQFUdAt61QP15FriLp6r+D3DD\nKT7rduD25bcpSVptfhNYkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBI\nUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1\nygCQpE4ZAJLUKQNAkjq1ZAAk2ZjkoSRHkhxO8rFW/70k303yRHtdP7TOLUlmkzyb5Jqh+rWtNptk\n15nZJUnSKM4ZYcxJ4Ler6htJ3g48nuRAW3ZnVf3n4cFJLgO2A+8EfhH4qyT/qC3+LPDrwBzwWJJ9\nVfXMauyIJGl5lgyAqjoGHGvTP0xyBFi/yCrbgHuq6lXg20lmgSvastmqeh4gyT1trAEgSROwrGsA\nSWaAdwGPtNLNSQ4l2ZPkwlZbD7w4tNpcq52qLkmagJEDIMnbgC8BH6+qHwB3Ab8MbGFwhPCH80MX\nWL0Wqb9xOzuTHExy8MSJE6O2J0lappECIMm5DP7y/0JVfRmgql6qqteq6ifAH/PT0zxzwMah1TcA\nRxepv05V7a6qrVW1de3atcvdH0nSiEa5CyjA3cCRqvr0UH3d0LAPAU+36X3A9iTnJ9kEbAYeBR4D\nNifZlOQ8BheK963ObkiSlmuUu4DeDfwm8FSSJ1rtE8CHk2xhcBrnBeC3AKrqcJJ7GVzcPQncVFWv\nASS5GXgAWAPsqarDq7gvkqRlGOUuoL9m4fP3+xdZ53bg9gXq+xdbT5I0Pn4TWJI6ZQBIUqcMAEnq\nlAEgSZ0yACSpU6PcBipNrZld90+6Bems5RGAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmd\nMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjrlw+Cks8wkH4D3wh3vn9i2tfo8ApCkThkAktQpA0CSOmUA\nSFKnDABJ6pQBIEmdMgAkqVNLBkCSjUkeSnIkyeEkH2v1i5IcSPJce7+w1ZPkM0lmkxxKcvnQZ+1o\n459LsuPM7ZYkaSmjHAGcBH67qt4BXAnclOQyYBfwYFVtBh5s8wDXAZvbaydwFwwCA7gN+DXgCuC2\n+dCQJI3fkgFQVceq6htt+ofAEWA9sA3Y24btBT7YprcBn6+Bh4ELkqwDrgEOVNXLVfU94ABw7aru\njSRpZMu6BpBkBngX8AhwaVUdg0FIAJe0YeuBF4dWm2u1U9XfuI2dSQ4mOXjixInltCdJWoaRAyDJ\n24AvAR+vqh8sNnSBWi1Sf32handVba2qrWvXrh21PUnSMo0UAEnOZfCX/xeq6sut/FI7tUN7P97q\nc8DGodU3AEcXqUuSJmCUu4AC3A0cqapPDy3aB8zfybMDuG+o/pF2N9CVwCvtFNEDwNVJLmwXf69u\nNUnSBIzyOOh3A78JPJXkiVb7BHAHcG+SG4HvADe0ZfuB64FZ4MfARwGq6uUknwQea+P+oKpeXpW9\nkCQt25IBUFV/zcLn7wGuWmB8ATed4rP2AHuW06Ak6czwm8CS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0y\nACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNA\nkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1KklAyDJniTHkzw9VPu9JN9N8kR7XT+0\n7JYks0meTXLNUP3aVptNsmv1d0WStByjHAH8CXDtAvU7q2pLe+0HSHIZsB14Z1vnj5KsSbIG+Cxw\nHXAZ8OE2VpI0IecsNaCqvp5kZsTP2wbcU1WvAt9OMgtc0ZbNVtXzAEnuaWOfWXbHkqRVcTrXAG5O\ncqidIrqw1dYDLw6NmWu1U9UlSROy0gC4C/hlYAtwDPjDVs8CY2uR+psk2ZnkYJKDJ06cWGF7kqSl\nrCgAquqlqnqtqn4C/DE/Pc0zB2wcGroBOLpIfaHP3l1VW6tq69q1a1fSniRpBCsKgCTrhmY/BMzf\nIbQP2J7k/CSbgM3Ao8BjwOYkm5Kcx+BC8b6Vty1JOl1LXgRO8kXgPcDFSeaA24D3JNnC4DTOC8Bv\nAVTV4ST3Mri4exK4qapea59zM/AAsAbYU1WHV31vJEkjG+UuoA8vUL57kfG3A7cvUN8P7F9Wd5Kk\nM8ZvAktSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSp\nUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjpl\nAEhSp5YMgCR7khxP8vRQ7aIkB5I8194vbPUk+UyS2SSHklw+tM6ONv65JDvOzO5IkkY1yhHAnwDX\nvqG2C3iwqjYDD7Z5gOuAze21E7gLBoEB3Ab8GnAFcNt8aEiSJuOcpQZU1deTzLyhvA14T5veC3wN\n+J1W/3xVFfBwkguSrGtjD1TVywBJDjAIlS+e9h5oKszsun/SLUhappVeA7i0qo4BtPdLWn098OLQ\nuLlWO1VdkjQhq30ROAvUapH6mz8g2ZnkYJKDJ06cWNXmJEk/tdIAeKmd2qG9H2/1OWDj0LgNwNFF\n6m9SVburamtVbV27du0K25MkLWWlAbAPmL+TZwdw31D9I+1uoCuBV9opogeAq5Nc2C7+Xt1qkqQJ\nWfIicJIvMriIe3GSOQZ389wB3JvkRuA7wA1t+H7gemAW+DHwUYCqejnJJ4HH2rg/mL8gLEmajFHu\nAvrwKRZdtcDYAm46xefsAfYsqztJ0hnjN4ElqVMGgCR1ygCQpE4teQ1AkuZN6hvfL9zx/ols963O\nIwBJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoA\nkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktSp0wqAJC8keSrJE0kO\nttpFSQ4kea69X9jqSfKZJLNJDiW5fDV2QJK0MqtxBPAvqmpLVW1t87uAB6tqM/Bgmwe4DtjcXjuB\nu1Zh25KkFToTp4C2AXvb9F7gg0P1z9fAw8AFSdadge1LkkZwugFQwFeTPJ5kZ6tdWlXHANr7Ja2+\nHnhxaN25VnudJDuTHExy8MSJE6fZniTpVM45zfXfXVVHk1wCHEjyzUXGZoFavalQtRvYDbB169Y3\nLZckrY7TOgKoqqPt/TjwFeAK4KX5Uzvt/XgbPgdsHFp9A3D0dLYvSVq5FQdAkp9P8vb5aeBq4Glg\nH7CjDdsB3Nem9wEfaXcDXQm8Mn+qSJI0fqdzCuhS4CtJ5j/nT6vqL5M8Btyb5EbgO8ANbfx+4Hpg\nFvgx8NHT2LYk6TStOACq6nngVxeo/2/gqgXqBdy00u1JklaX3wSWpE4ZAJLUKQNAkjplAEhSpwwA\nSeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6dbr/HoCmzMyu+yfdgqSzhEcAktQpA0CSOmUA\nSFKnvAYgaepN8trWC3e8f2LbPtM8ApCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1\nygCQpE6NPQCSXJvk2SSzSXaNe/uSpIGxPgoiyRrgs8CvA3PAY0n2VdUz4+zjTPORzNJbx6T+PI/j\nERTjPgK4Apitquer6v8C9wDbxtyDJInxB8B64MWh+blWkySN2bifBpoFavW6AclOYGeb/VGSZ89g\nPxcDf3cGP/902NvKTXN/9rZy09zfqveWT53W6v9wlEHjDoA5YOPQ/Abg6PCAqtoN7B5HM0kOVtXW\ncWxruext5aa5P3tbuWnub5p7W8y4TwE9BmxOsinJecB2YN+Ye5AkMeYjgKo6meRm4AFgDbCnqg6P\nswdJ0sDY/0WwqtoP7B/3dk9hLKeaVsjeVm6a+7O3lZvm/qa5t1NKVS09SpL0luOjICSpU10HQJJ/\nl6SSXNzmk+Qz7TEVh5JcPoGePtm2/USSryb5xSnq7T8l+Wbb/leSXDC07JbW27NJrplAbzckOZzk\nJ0m2vmHZRHsb6mNqHoOSZE+S40meHqpdlORAkufa+4UT6m1jkoeSHGk/049NS39JfjbJo0mebL39\nfqtvSvJI6+3P2k0u06+qunwxuB31AeBvgYtb7XrgLxh8X+FK4JEJ9PX3hqb/LfC5KertauCcNv0p\n4FNt+jLgSeB8YBPwLWDNmHt7B/CPga8BW4fqE++t9bGmbfuXgPNaT5eNu4+hfv45cDnw9FDtPwK7\n2vSu+Z/vBHpbB1zept8O/M/2c5x4f+3P39va9LnAI+3P473A9lb/HPBvJvWzXc6r5yOAO4F/z+u/\niLYN+HwNPAxckGTdOJuqqh8Mzf78UH/T0NtXq+pkm32Ywfc45nu7p6perapvA7MMHvsxzt6OVNVC\nXxqceG/NVD0Gpaq+Drz8hvI2YG+b3gt8cKxNNVV1rKq+0aZ/CBxh8MSAiffX/vz9qM2e214FvBf4\n80n2thJdBkCSDwDfraon37BoKh5VkeT2JC8C/wr43Wnqbci/ZnBEAtPX27Bp6W1a+ljMpVV1DAZ/\nCQOXTLgfkswA72Lwm/ZU9JdkTZIngOPAAQZHdt8f+uVoGn+2Cxr7baDjkuSvgH+wwKJbgU8wOJ3x\nptUWqK36bVKL9VZV91XVrcCtSW4BbgZum5be2phbgZPAF+ZXm5beFlptgdokbn2blj7OGkneBnwJ\n+HhV/SBZ6D/h+FXVa8CWdg3sKwxOP75p2Hi7Wpm3bABU1fsWqif5JwzOBT/Z/ofaAHwjyRWM8KiK\nM9nbAv4UuJ9BAExFb0l2AP8SuKraCc9p6e0UxtLbWdTHYl5Ksq6qjrXTi8cn1UiScxn85f+Fqvry\ntPUHUFXfT/I1BtcALkhyTjsKmMaf7YK6OwVUVU9V1SVVNVNVMwz+YF5eVf+LwWMpPtLuuLkSeGX+\nkHNckmwemv0A8M02PQ29XQv8DvCBqvrx0KJ9wPYk5yfZBGwGHh1nb4uYlt7Ohseg7AN2tOkdwKmO\nqs6oDH4zuxs4UlWfHlo08f6SrJ2/+y3JzwHvY3CN4iHgNybZ24pM+ir0pF/AC/z0LqAw+AdrvgU8\nxdDdJGPs50vA08Ah4L8B66eot1kG57GfaK/PDS27tfX2LHDdBHr7EIMwfxV4CXhgWnob6uN6Bne0\nfIvBaauJ9NF6+SJwDPh/7b/bjcAvAA8Cz7X3iybU2z9jcArl0ND/a9dPQ3/APwX+pvX2NPC7rf5L\nDH6xmAX+K3D+JH++o778JrAkdaq7U0CSpAEDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCk\nTv1/ZVagf9/1dRsAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1fb8b20b9b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = np.random.normal(0,10,10000)\n",
+    "plt.hist(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,6 +225,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
